[gd_scene load_steps=17 format=3 uid="uid://opos1aju41gk"]

[ext_resource type="Texture2D" uid="uid://7i6q3lr0xqit" path="res://assets/items and trap_animation/chest/chest_1.png" id="1_0jdmr"]
[ext_resource type="Script" path="res://scripts/damage_power_up.gd" id="1_hb3ay"]
[ext_resource type="Texture2D" uid="uid://bpdj4cig1ggtx" path="res://assets/items and trap_animation/chest/chest_open_2.png" id="2_5ysvp"]
[ext_resource type="Texture2D" uid="uid://dofaq8oxvexdr" path="res://assets/items and trap_animation/chest/chest_2.png" id="3_rs4mp"]
[ext_resource type="Texture2D" uid="uid://jbtbik5pumwr" path="res://assets/items and trap_animation/chest/chest_open_3.png" id="4_a3deo"]
[ext_resource type="Texture2D" uid="uid://6xewxl6w8pix" path="res://assets/items and trap_animation/chest/chest_open_4.png" id="5_cbwd3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d7r5k"]
atlas = ExtResource("1_0jdmr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ied60"]
atlas = ExtResource("1_0jdmr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq52b"]
atlas = ExtResource("2_5ysvp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6tqm"]
atlas = ExtResource("3_rs4mp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7sfk"]
atlas = ExtResource("4_a3deo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1rbs"]
atlas = ExtResource("4_a3deo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eko8l"]
atlas = ExtResource("5_cbwd3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ao46e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7r5k")
}],
"loop": true,
"name": &"closed_chest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ied60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq52b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6tqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7sfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1rbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eko8l")
}],
"loop": true,
"name": &"open_chest",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eko8l")
}],
"loop": true,
"name": &"opened_chest",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8umcv"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n02og"]
size = Vector2(18, 16)

[node name="damage_power_up" type="Node2D"]
script = ExtResource("1_hb3ay")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ao46e")
animation = &"opened_chest"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_8umcv")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_n02og")

[node name="time_to_open_chest" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="time_to_open_chest" to="." method="_on_time_to_open_chest_timeout"]
